# documind

./: .gitignore  README.md  README_CN.md  install.sh  pyproject.toml
.github/workflows/: release.yml
example/: README.md  sample.docx
scripts/: build_binary.py
skills/: README.md
skills/documind-converter/: SKILL.md
src/documind/: __init__.py  binary_build.py  cli.py  constants.py  errors.py  logging.py  progress.py  types.py
src/documind/parser/: __init__.py  block_iterator.py  document_parser.py  heading_detector.py  image_parser.py  table_parser.py
src/documind/pipeline/: __init__.py  convert.py
src/documind/reader/: __init__.py  media_exporter.py  package_reader.py  relationships.py
src/documind/render/: __init__.py  frontmatter.py  html_table_renderer.py  index_renderer.py  inline_renderer.py  link_resolver.py  markdown_renderer.py
src/documind/transform/: __init__.py  ast_cleaner.py  chunker.py  slugger.py  toc_builder.py
tests/: __init__.py  conftest.py  fixtures.py  test_binary_build.py  test_install_script.py  test_release_workflow.py
tests/parser/: test_document_parser.py  test_heading_detector.py
tests/pipeline/: test_cli.py  test_convert_pipeline.py
tests/reader/: test_package_reader.py
tests/render/: test_html_table_renderer.py  test_index_renderer.py  test_inline_renderer.py  test_markdown_renderer.py
tests/transform/: test_ast_cleaner.py  test_chunker.py
